Fix iframe padding and margins, take it out of container

--- a/work/styles/stylus_modules/layout.styl
+++ b/work/styles/stylus_modules/layout.styl
@@ -1,5 +1,7 @@
 body
   padding-top navbar_height
+  &::-webkit-scrollbar
+    display none
 
 section, .anchor
   padding-top navbar_height
